<resources>
    <string name="app_name">SMS APP</string>
    <string name="app_icon">app_icon</string>
    <string name="email_id">Email ID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="student_img">Student Image</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No</string>
    <string name="class_no">Class</string>
    <string name="select_student">Select Student</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="open">Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>
    <string name="powerd_by_crypticthread_pvt_ltd">Powerd By CrypticThread Pvt.Ltd</string>
</resources>
