<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    android:padding="@dimen/activity_horizontal_margin"
    android:focusableInTouchMode="true"
    tools:context="crypticthread.smsapp.LoginActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/sv_login_holder"
        android:contentDescription="@string/app_icon" />

    <ScrollView
        android:id="@+id/sv_login_holder"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:drawableStart="@drawable/ic_email_id"
                    android:id="@+id/et_emailId"
                    android:maxLines="1"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:drawableStart="@drawable/ic_password"
                    android:id="@+id/et_password"
                    android:maxLines="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/tv_forgot"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
