<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/student_img"
                android:src="@drawable/ic_person" />

            <TableLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin">

                <TableRow android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0px"
                        android:layout_weight="0.5"
                        android:text="@string/name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0px"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0px"
                        android:layout_weight="0.5"
                        android:text="@string/class_no" />

                    <TextView
                        android:id="@+id/class_no"
                        android:layout_width="0px"
                        android:layout_weight="1" />

                </TableRow>

                <TableRow android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0px"
                        android:layout_weight="0.5"
                        android:text="@string/roll_no" />

                    <TextView
                        android:id="@+id/roll_no"
                        android:layout_width="0px"
                        android:layout_weight="1" />

                </TableRow>

            </TableLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>