<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context="crypticthread.smsapp.MenuActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/cb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                app:layout_scrollInterpolator="@android:interpolator/decelerate_cubic">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center"
                    android:background="@color/card_bg"
                    android:orientation="horizontal"
                    android:paddingTop="32dp">

                    <ImageView
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:contentDescription="@string/student_img"
                        android:src="@drawable/ic_person" />

                    <TableLayout
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/activity_horizontal_margin">

                        <TableRow android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="0px"
                                android:layout_weight="0.5"
                                android:text="@string/name"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="0px"
                                android:layout_weight="1"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="0px"
                                android:layout_weight="0.5"
                                android:text="@string/class_no" />

                            <TextView
                                android:id="@+id/class_no"
                                android:layout_width="0px"
                                android:layout_weight="1" />

                        </TableRow>

                        <TableRow android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="0px"
                                android:layout_weight="0.5"
                                android:text="@string/roll_no" />

                            <TextView
                                android:id="@+id/roll_no"
                                android:layout_width="0px"
                                android:layout_weight="1" />

                        </TableRow>

                    </TableLayout>
                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tb"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/attendance"
                        android:layout_width="0px"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/card_bg_one"
                            android:gravity="center"
                            android:text="Attendance" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/marks_sheet"
                        android:layout_width="0px"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/card_bg_two"
                            android:gravity="center"
                            android:text="MarksSheet" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/fee"
                        android:layout_width="0px"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/card_bg_two"
                            android:gravity="center"
                            android:text="Fee" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/subject"
                        android:layout_width="0px"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/card_bg_one"
                            android:gravity="center"
                            android:text="Subjects" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/routine"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="4dp"
                    android:layout_marginTop="@dimen/activity_horizontal_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_bg_one"
                        android:gravity="center"
                        android:text="Routine" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/notice"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_bg_two"
                        android:gravity="center"
                        android:text="Notice" />

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/fragHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />


</android.support.v4.widget.DrawerLayout>
